# arc

./: .clang-format  CMakeLists.txt  README.md
include/arc/: arc.hpp  fwd.hpp
include/arc/arc/: all.hpp  context.hpp  coro.hpp  funnel.hpp  future.hpp  key_of.hpp  options.hpp  promise_proxy.hpp  result.hpp  tile.hpp
include/arc/detail/: control_block.hpp  globals.hpp  handle.hpp  key.hpp  name_store.hpp  promise.hpp  promise_base.hpp  reflect.hpp  scheduler.hpp  store.hpp
include/arc/extra/: algorithms.hpp  guard.hpp  non_copyable_non_movable.hpp  on_scope_exit.hpp  task.hpp
include/arc/impl/: arc.ipp
include/arc/util/: check.hpp  debug.hpp  platform.hpp  std.hpp  tracing.hpp  util.hpp
src/: arc.cpp
tests/: arc_api_test.cpp  arc_example_1.cpp  arc_example_2.cpp  folder_size.cpp  testing_macros.hpp
